footer position fixed and gap between them

--- a/style.css
+++ b/style.css
@@ -578,7 +578,7 @@ article hr {
   border-top: 1px solid black;
 }
 
-.footer-end-right {
+.foter-end-right {
   margin-left: 275px;
   margin-right: -250px;
   font-weight: 600;
